exports[`invalid(1): {\n\t\"overrides\": {}\n} 1`] = `

[Input]
  1 | {
  2 | 	"overrides": {}
  3 | }

`;

exports[`invalid(1): {\n\t\"overrides\": {}\n} 2`] = `

Message:
  1 | {
> 2 | 	"overrides": {}
    | 	^^^^^^^^^^^ The \`overrides\` field is ignored when this package is installed as a dependency.
  3 | }

Suggestion 1/1: Remove the \`overrides\` field.:
  1 | {}

`;

exports[`invalid(10): {\"private\": [], \"overrides\": {}} 1`] = `

[Input]
  1 | {"private": [], "overrides": {}}

`;

exports[`invalid(10): {\"private\": [], \"overrides\": {}} 2`] = `

Message:
> 1 | {"private": [], "overrides": {}}
    |                 ^^^^^^^^^^^ The \`overrides\` field is ignored when this package is installed as a dependency.

Suggestion 1/1: Remove the \`overrides\` field.:
  1 | {"private": []}

`;

exports[`invalid(11): {\"private\": \"\", \"overrides\": {}} 1`] = `

[Input]
  1 | {"private": "", "overrides": {}}

`;

exports[`invalid(11): {\"private\": \"\", \"overrides\": {}} 2`] = `

Message:
> 1 | {"private": "", "overrides": {}}
    |                 ^^^^^^^^^^^ The \`overrides\` field is ignored when this package is installed as a dependency.

Suggestion 1/1: Remove the \`overrides\` field.:
  1 | {"private": ""}

`;

exports[`invalid(12): {\"private\": 0, \"overrides\": {}} 1`] = `

[Input]
  1 | {"private": 0, "overrides": {}}

`;

exports[`invalid(12): {\"private\": 0, \"overrides\": {}} 2`] = `

Message:
> 1 | {"private": 0, "overrides": {}}
    |                ^^^^^^^^^^^ The \`overrides\` field is ignored when this package is installed as a dependency.

Suggestion 1/1: Remove the \`overrides\` field.:
  1 | {"private": 0}

`;

exports[`invalid(13): {\"private\": null, \"overrides\": {}} 1`] = `

[Input]
  1 | {"private": null, "overrides": {}}

`;

exports[`invalid(13): {\"private\": null, \"overrides\": {}} 2`] = `

Message:
> 1 | {"private": null, "overrides": {}}
    |                   ^^^^^^^^^^^ The \`overrides\` field is ignored when this package is installed as a dependency.

Suggestion 1/1: Remove the \`overrides\` field.:
  1 | {"private": null}

`;

exports[`invalid(2): {\n\t\"overrides\": {\n\t\t\"foo\": \"1.0.0\"\n\t},\n\t\"name\": \"foo\"\n} 1`] = `

[Input]
  1 | {
  2 | 	"overrides": {
  3 | 		"foo": "1.0.0"
  4 | 	},
  5 | 	"name": "foo"
  6 | }

`;

exports[`invalid(2): {\n\t\"overrides\": {\n\t\t\"foo\": \"1.0.0\"\n\t},\n\t\"name\": \"foo\"\n} 2`] = `

Message:
  1 | {
> 2 | 	"overrides": {
    | 	^^^^^^^^^^^ The \`overrides\` field is ignored when this package is installed as a dependency.
  3 | 		"foo": "1.0.0"
  4 | 	},
  5 | 	"name": "foo"
  6 | }

Suggestion 1/1: Remove the \`overrides\` field.:
  1 | {
  2 | 	"name": "foo"
  3 | }

`;

exports[`invalid(3): {\n\t\"name\": \"foo\",\n\t\"overrides\": {\n\t\t\"foo\": \"1.0.0\"\n\t},\n\t\"version\": \"1.0.0\"\n} 1`] = `

[Input]
  1 | {
  2 | 	"name": "foo",
  3 | 	"overrides": {
  4 | 		"foo": "1.0.0"
  5 | 	},
  6 | 	"version": "1.0.0"
  7 | }

`;

exports[`invalid(3): {\n\t\"name\": \"foo\",\n\t\"overrides\": {\n\t\t\"foo\": \"1.0.0\"\n\t},\n\t\"version\": \"1.0.0\"\n} 2`] = `

Message:
  1 | {
  2 | 	"name": "foo",
> 3 | 	"overrides": {
    | 	^^^^^^^^^^^ The \`overrides\` field is ignored when this package is installed as a dependency.
  4 | 		"foo": "1.0.0"
  5 | 	},
  6 | 	"version": "1.0.0"
  7 | }

Suggestion 1/1: Remove the \`overrides\` field.:
  1 | {
  2 | 	"name": "foo",
  3 | 	"version": "1.0.0"
  4 | }

`;

exports[`invalid(4): {\n\t\"name\": \"foo\",\n\t\"overrides\": {\n\t\t\"foo\": {\n\t\t\t\"bar\": \"1.0.0\"\n\t\t}\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"name": "foo",
  3 | 	"overrides": {
  4 | 		"foo": {
  5 | 			"bar": "1.0.0"
  6 | 		}
  7 | 	}
  8 | }

`;

exports[`invalid(4): {\n\t\"name\": \"foo\",\n\t\"overrides\": {\n\t\t\"foo\": {\n\t\t\t\"bar\": \"1.0.0\"\n\t\t}\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"name": "foo",
> 3 | 	"overrides": {
    | 	^^^^^^^^^^^ The \`overrides\` field is ignored when this package is installed as a dependency.
  4 | 		"foo": {
  5 | 			"bar": "1.0.0"
  6 | 		}
  7 | 	}
  8 | }

Suggestion 1/1: Remove the \`overrides\` field.:
  1 | {
  2 | 	"name": "foo"
  3 | }

`;

exports[`invalid(5): {\"name\": \"foo\", \"overrides\": []} 1`] = `

[Input]
  1 | {"name": "foo", "overrides": []}

`;

exports[`invalid(5): {\"name\": \"foo\", \"overrides\": []} 2`] = `

Message:
> 1 | {"name": "foo", "overrides": []}
    |                 ^^^^^^^^^^^ The \`overrides\` field is ignored when this package is installed as a dependency.

Suggestion 1/1: Remove the \`overrides\` field.:
  1 | {"name": "foo"}

`;

exports[`invalid(6): {\"private\": false, \"overrides\": {\"foo\": \"1.0.0\"}} 1`] = `

[Input]
  1 | {"private": false, "overrides": {"foo": "1.0.0"}}

`;

exports[`invalid(6): {\"private\": false, \"overrides\": {\"foo\": \"1.0.0\"}} 2`] = `

Message:
> 1 | {"private": false, "overrides": {"foo": "1.0.0"}}
    |                    ^^^^^^^^^^^ The \`overrides\` field is ignored when this package is installed as a dependency.

Suggestion 1/1: Remove the \`overrides\` field.:
  1 | {"private": false}

`;

exports[`invalid(7): {\"private\": \"true\", \"overrides\": {}} 1`] = `

[Input]
  1 | {"private": "true", "overrides": {}}

`;

exports[`invalid(7): {\"private\": \"true\", \"overrides\": {}} 2`] = `

Message:
> 1 | {"private": "true", "overrides": {}}
    |                     ^^^^^^^^^^^ The \`overrides\` field is ignored when this package is installed as a dependency.

Suggestion 1/1: Remove the \`overrides\` field.:
  1 | {"private": "true"}

`;

exports[`invalid(8): {\"private\": 1, \"overrides\": {}} 1`] = `

[Input]
  1 | {"private": 1, "overrides": {}}

`;

exports[`invalid(8): {\"private\": 1, \"overrides\": {}} 2`] = `

Message:
> 1 | {"private": 1, "overrides": {}}
    |                ^^^^^^^^^^^ The \`overrides\` field is ignored when this package is installed as a dependency.

Suggestion 1/1: Remove the \`overrides\` field.:
  1 | {"private": 1}

`;

exports[`invalid(9): {\"private\": {}, \"overrides\": {}} 1`] = `

[Input]
  1 | {"private": {}, "overrides": {}}

`;

exports[`invalid(9): {\"private\": {}, \"overrides\": {}} 2`] = `

Message:
> 1 | {"private": {}, "overrides": {}}
    |                 ^^^^^^^^^^^ The \`overrides\` field is ignored when this package is installed as a dependency.

Suggestion 1/1: Remove the \`overrides\` field.:
  1 | {"private": {}}

`;
